--- a/APP/StayHome/package.json
+++ b/APP/StayHome/package.json
@@ -15,17 +15,19 @@
     "react-native-elements": "^1.2.7",
     "react-native-maps": "0.27.1",
     "react-native-stopwatch-timer": "0.0.21",
-    "react-native-vector-icons": "^6.6.0"
+    "react-native-vector-icons": "^6.6.0",
+    "mem": ">=4.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
-    "@babel/runtime": "^7.9.0",
+    "@babel/runtime": "^7.9.2",
     "@react-native-community/eslint-config": "^0.0.7",
     "babel-jest": "^25.1.0",
     "eslint": "^6.8.0",
     "jest": "^25.1.0",
     "metro-react-native-babel-preset": "^0.59.0",
-    "react-test-renderer": "16.9.0"
+    "react-test-renderer": "16.9.0",
+    "mem": ">=4.0.0"
   },
   "jest": {
     "preset": "react-native"
